# ai-devops-agent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
memory/: history.txt
tools/: .gitignore  file_tools.py  memory_tools.py  terminal_tools.py
tools/pytest/: test_file_tools.py  test_memory.py  test_terminal.py
